Add: Click logo to go home

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,11 @@ body>header {
     top: 0;
 }
 
+body>header a {
+    color: #fff;
+    text-decoration: none;
+}
+
 /* Add Gradient */
 /* Reference: https://stackoverflow.com/questions/8384751/css-text-gradient */
 body>header span {
