--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,21 @@
 :root {
     --gradient-pink-to-cyan: linear-gradient(90deg, rgba(255, 43, 166, 1) 0%, rgba(32, 227, 255, 1) 100%);
 }
+
 body {
     background-color: #000;
     color: #fff;
 }
+
 main {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-content: space-around;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
+    display: grid;
+    justify-items: center;
 }
+
 /* section {
     border-bottom: 1px solid rgba(128, 128, 128, .5);
 } */
@@ -18,6 +23,7 @@ a {
     color: #fff;
     text-decoration: none;
 }
+
 html, body, ul, li {
     padding: 0;
     margin: 0;
@@ -25,7 +31,8 @@ html, body, ul, li {
 
 /* Header of the webpage*/
 body>header, body>footer {
-    padding: 20px 100px;;
+    padding: 20px 100px;
+    ;
     position: sticky;
     overflow: hidden;
     background-color: #000;
@@ -36,13 +43,14 @@ body>header, body>footer {
     border-top: 1px solid rgba(128, 128, 128, .5);
     border-bottom: 1px solid rgba(128, 128, 128, .5);
 }
+
 body>header h1, body>footer h1 {
     font-size: 1.17em;
 }
 
 /* Add Gradient */
 /* Reference: https://stackoverflow.com/questions/8384751/css-text-gradient */
-body>header span, body>footer span  {
+body>header span, body>footer span {
     background: var(--gradient-pink-to-cyan);
     color: transparent;
     background-clip: text;
@@ -67,35 +75,96 @@ nav ul li a:hover {
     background-color: #b7ff3ba1;
 }
 
+/* Reference: https://stackoverflow.com/questions/44147872/linear-gradient-underline-for-hyperlink */
+main section header h2 {
+    display: inline;
+    background-image: var(--gradient-pink-to-cyan);
+    background-repeat: no-repeat;
+    background-size: 100% 2px;
+    background-position: bottom;
+}
+
 /* 1st Section */
+.homepage {
+    display: flex;
+    align-items: center;
+    /* justify-content: space-around; */
+    width: 80vw;
+    /* margin-top: 2rem; */
+}
+
+.homepage img {
+    width: 40%;
+    margin-left: 5rem;
+}
+
 .homepage h2 {
     font-size: 2em;
 }
+
 .homepage h2 span {
-    background: linear-gradient(90deg,rgba(255, 43, 166, 1) 0%, rgba(32, 227, 255, 1) 50%, rgba(182, 255, 59, 1) 100%);
+    background: linear-gradient(90deg, rgba(255, 43, 166, 1) 0%, rgba(32, 227, 255, 1) 50%, rgba(182, 255, 59, 1) 100%);
     color: transparent;
     background-clip: text;
 }
+
 .homepage a {
     margin: 5px;
     padding: 10px;
+    border: none;
     border-radius: 25px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.homepage a.primary {
-    background: var(--gradient-pink-to-cyan);
+/* .homepage a::after {
+    content: '';
+    position: absolute;
+    height: 107%;
+    width: 102%;
+    border-radius: 25px;
+    z-index: -1;
 }
+.homepage a.primary::after {
+    background-image: linear-gradient(to right, #ff2ba6, #20e3ff);
+} */
 .homepage a.secundary {
-    background: #b7ff3b;
     color: #000;
+}
+.homepage a.secundary::after {
+    background: #b7ff3b;
+}
+
+/* Launches */
+.launches {
+    background: #2A7B9B;
+    background: linear-gradient(180deg, rgba(42, 123, 155, 1) 0%, rgba(0, 0, 0, 1) 100%);
+    width: 100%;
+}
+
+.launches header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 2rem;
+}
+
+.launches div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 /* Footer */
 body>footer {
     padding-bottom: 30px;
 }
+
 body>footer nav {
     margin-top: 10px;
 }
+
 body>footer p, body>footer address {
     display: inline;
 }
