Add: styles for artist

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -172,4 +172,19 @@
 
 .artist article {
     display: inline-flex;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #000;
+    width: 20rem;
+}
+
+.artist article img {
+    border-radius: 10px;
+    width: 5rem;
+    height: 5rem;
+    margin: 10px;
+}
+
+.artist article div {
+    margin: 0 10px;
 }
