--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,6 +27,15 @@
     margin: 10px auto;
 }
 
+.releases article, .releases header a, .artist article, .artist header a, .top10 header a {
+    transition: 0.3s;
+}
+
+.releases article:hover, .releases header a:hover, .artist article:hover, .artist header a:hover, .top10 header a:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    transform: translateY(-5px);
+}
+
 /* 1st Section */
 .homepage {
     display: flex;
@@ -85,6 +94,10 @@
     z-index: 0;
 }
 
+.mainBtn:hover:active {
+    filter: brightness(0.75);
+}
+
 .mainBtn.secondary:hover {
     color: #000;
 }
@@ -116,15 +129,10 @@
 
 .releases article {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
     border-radius: 1rem;
     width: 15em;
     margin: 10px;
     background-color: #000;
-}
-
-.releases article:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .releases img {
