--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,11 @@
     --gray-05: rgba(128, 128, 128, .5);
 }
 
+html, body, ul, li {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: #000;
     color: #fff;
@@ -21,9 +26,8 @@ a {
     text-decoration: none;
 }
 
-html, body, ul, li {
-    padding: 0;
-    margin: 0;
+img {
+    user-select: none;
 }
 
 /* Header of the webpage*/
